--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@
     --highlight-color: #DB00FF;
     --alt-color: #000AFF;
     --highlightER-color: #dab46e13;
-    --title-fontsize: calc(1.0rem + 1.3vw);
+    --title-fontsize: calc(1.2rem + 0.5vw);
     --nav-fontsize: calc(0.7rem + 1.3vw);
-    --p-fontsize: calc(0.4rem + 1.0vw);
-    --cycle-fontsize: calc(0.5rem + 1.5vw);
+    --p-fontsize: calc(0.8rem + 0.3vw);
+    --h3-fontsize: calc(0.3rem + 0.6vw);
+    --cycle-fontsize: calc(0.8rem + 1.0vw);
 }
 
 /* Force 'html' to be viewport width */
@@ -40,7 +41,7 @@ body {
     color: var(--text-color);
     background-color: var(--background-color);
     font-family: 'Outfit'; 
-    overflow-x:hidden;
+    overflow:hidden;
     margin-left:auto;
     margin-right:auto;
     
@@ -48,6 +49,7 @@ body {
 a {
     text-decoration: none;
     color: var(--hella-lowkey-accent-color);
+    
 }
 .canvas-container {
     position: absolute;
@@ -105,7 +107,22 @@ a {
     text-transform: uppercase;
     color: var(--text-color);
     margin-top: 5vh;
-    text-indent: 50px;
+    text-indent: 60px;
+}
+
+.nav-item .underlined {
+    position: relative;
+    display: inline-block;
+}
+
+.nav-item .underlined::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background: linear-gradient(to right, #000AFF, #DB00FF);
 }
 
 a.underlined, span.underlined {
@@ -130,45 +147,72 @@ a.underlined:hover, a:hover span.underlined {
 
 
 
-.first{
-    height: 100vh;
-    box-sizing: border-box;
-    
-    
-}
 
-/*
+
+
 .header {
-    
-    margin-top: 15.5%;
-
-}
-*/
-
-.second{
-    
-    height: 100vh;
+    margin: 0%;
     box-sizing: border-box;
+    height: 100vh;
 }
 
+.header::before,
+.header::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background-clip: padding-box; 
+    box-sizing: border-box; 
+}
 
+.header::before {
+    top: 50px;
+    left: 10%;
+    border-width: 30px;
+    border-style: solid;
+    height: 150px;
+    width: 150px;
+    border-image: linear-gradient(to bottom right, #000AFF, #DB00FF 50%, transparent 50%) 1; 
+    padding: 150px;
+}
+.header::after {
+    bottom: 50px;
+    right: 10%;
+    border-width: 30px;
+    border-style: solid;
+    height: 150px;
+    width: 150px;
+    border-image: linear-gradient(to top left,  #000AFF, #DB00FF 50%, transparent 50%) 1;
+    padding: 150px;
+
+}
+
+@media only screen and (max-width: 600px){
+    .header::before{
+        top: 0;
+        left: 0;
+    }
+    .header::after{
+        bottom: 0;
+        right: 0;
+    }
+}
 
 .vi::before {
     content: "";
     position: absolute;
     top: 0;
     bottom: 0;
-    height: 400px;
-    top: 29%;
-    left: 10%;
-    
-    
-    width: 4px; /* twice the border width for visibility */
+    height: 153px;
+    top: 44.2%;
+    left: 16%;
+    width: 2px; /* twice the border width for visibility */
     background: linear-gradient(to top, #000AFF, #DB00FF); /* Replace with your desired colors */
 }
 
 .title {
     top: 35%;
+    left: 17%;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
     font-variation-settings: "wght" 400;
@@ -187,10 +231,10 @@ a.underlined:hover, a:hover span.underlined {
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
     font-weight: 400;
-    margin-left: 240px;
     position:absolute;
     animation: fadeIn 3s;
-
+    
+    
     
     
     
@@ -207,9 +251,10 @@ a.underlined:hover, a:hover span.underlined {
 
 @media only screen and (max-width: 600px) {
     .title {
-        font-size: calc(2.5 * var(--title-fontsize));
-
-        line-height: calc(1rem + 1.5 * var(--title-fontsize));
+        font-size: calc(var(--title-fontsize)-100px);
+        line-height: calc(2rem + 1.5 * var(--title-fontsize));
+        border: 1px solid red;
+        top: 70px;
     }
 
     .title h1 {
@@ -223,67 +268,24 @@ a.underlined:hover, a:hover span.underlined {
 }
 
 
-.picture {
-    height: auto; 
-    width: 35%; 
-    position: relative;
-    top: 200px;
-    left: 55%;
-    transform: translate(-30%, -30%);   
-    animation: fadeIn 3s;    
-}
-
-.picture img {
-    max-width: 50%;
-    max-height: 50%;
-    float: right;  
-}
-
-.picture::before,
-.picture::after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    background-clip: padding-box; 
-    box-sizing: border-box; 
-}
-
-.picture::before {
-    top: -40px;
-    left: 200px;
-    border-width: 10px;
-    border-style: solid;
-    height: 150px;
-    width: 150px;
-    border-image: linear-gradient(to bottom right, #000AFF, #DB00FF 50%, transparent 50%) 1; 
-}
-.picture::after {
-    bottom: -550px;
-    right: -130px;
-    border-width: 10px;
-    border-style: solid;
-    height: 150px;
-    width: 150px;
-    border-image: linear-gradient(to top left,  #000AFF, #DB00FF 50%, transparent 50%) 1;
-}
-
-
 
 
 
 
 .intro {
     top: 42%;
+    left: 17.25%;
     font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     padding: 0 2vw 0 0;
     font-family: 'Outfit';
-    margin-left: 13%;
-    margin-right: 43%;
+    margin-right: 48%;
     position: absolute;
     animation: fadeIn 3s;
     display: inline-block;
+    
+    
     
     
  }
@@ -296,6 +298,12 @@ a.underlined:hover, a:hover span.underlined {
        
 }
 
+.intro h3{
+    font-size: var(--h3-fontsize);
+    
+    margin-top: -5px;
+
+}
 
 .intro em {
     font-style: normal;
@@ -334,22 +342,22 @@ a.underlined:hover, a:hover span.underlined {
     
 }
 
-#projects-header {
-font-size: calc( var(--cycle-fontsize) * 1.25);
+.projects-header {
+font-size: calc( var(--title-fontsize) * 2.55);
 margin-bottom: 0;
 
 
 }
 
-#projects-list {
+.projects-list {
 margin-left: 0;
 padding-left: 0;
 
 
 }
 
-#projects-list li, #projects-list a {
-font-size: calc(0.85 * var(--p-fontsize));
+.projects-list li, .projects-list a {
+font-size: calc(0.85 * var(--h3-fontsize));
 
 
 
@@ -358,11 +366,11 @@ font-size: calc(0.85 * var(--p-fontsize));
 @media only screen and (max-width: 600px) {
 #projects-header {
     font-size: calc( var(--cycle-fontsize) * 1.45);
-    
+    border: 1px solid green;    
 
 }
 
-#projects-list li, #projects-list a {
+.projects-list li, .projects-list a {
     font-size: calc(1.25 * var(--p-fontsize));
     animation: fadeIn 0.5s ease-in-out;
     
@@ -380,72 +388,72 @@ font-size: calc(0.85 * var(--p-fontsize));
         margin: 0 7.5vw 0 17.5vw;
     
         transition: margin 0.05s ease-out;
+        border: 1px solid orange;
+        
     }
 }
 
-.vl::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: 400px;
-    left: 50%;
-    top: 125%;
-    width: 4px; /* twice the border width for visibility */
-    background: linear-gradient(to top, #000AFF, #DB00FF); /* Replace with your desired colors */
-}
 
 .scroll{
-    font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     white-space: nowrap;
     display: inline-block;
-    background-color: var(--background-color-trans);
     line-height: 50px;
-    margin-top: 50%;
+    top: 66%;
+    left: 55%;
     flex-basis: 60%;
     /*margin-left: 50px;*/
     margin-left: 15.7%;
     margin-right: 50%;
     position: absolute;
-    top: 60%;
-    left: 51.5%;
     transform: translate(-50%, -50%);
     padding-bottom: 500px;
     margin-bottom: 50%;
-    /*animation: fadeIn 3s;*/
-    opacity: 0;
-    transition: opacity 1s ease-in;
-    
+    animation: fadeIn 3s;
     
 }
 
-.scroll.visible{
-    opacity: 1;
-}
+
 
 .repolist{
-    font-size: var(--p-fontsize);
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
     white-space: nowrap;
     display: inline-block;
     line-height: 48px;
-    margin-top: 60%;
+    top: 51%;
     flex-basis: 60%;
     margin-left: 15.7%;
     margin-right: 50%;
     position: absolute;
-    top: 45%;
-    left: 52.8%;
+    left: 53.5%;
     transform: translate(-50%, -50%);
-    padding-bottom: 200px;
+    
     text-align: left;
-    padding-right: 100px;
+    
     animation: fadeIn 3s;
-        
 }
+
+.repolist li {
+    display: block; /* This makes the element occupy the full width and starts on a new line */
+}
+
+.repolist li span {
+    position: relative;
+    display: inline;
+}
+
+.repolist li span::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background: linear-gradient(to right,#000AFF, #DB00FF);
+}
+
 
 
 .repo{
@@ -456,14 +464,31 @@ font-size: calc(0.85 * var(--p-fontsize));
     -webkit-text-fill-color: transparent; 
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
-    font-weight: 400;
-    
-
+    font-size: var(--title-fontsize);
 }
 
+.scroll::before,
+.scroll::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    background-clip: padding-box; 
+    box-sizing: border-box; 
+}
+
+.scroll::before {
+    top: 90px;
+    left: 3px;
+    border-width: 3px;
+    border-style: solid;
+    height: 100px;
+    width: 100px;
+    border-image: linear-gradient(to bottom right, #000AFF, #DB00FF 50%, transparent 50%) 1; 
+    
+}
 
 div.footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     margin-bottom: 2vh;
 }
@@ -472,16 +497,15 @@ footer {
     width: 100vw;
     text-align: center;
     font-size: calc(0.8 * var(--p-fontsize));
-    background-color: var(--background-color-trans);
-    animation: fadeIn 3s;
-    margin-right: 50%;
-    margin: 0;
-
 }
 
 @media only screen and (max-height: 400px) {
     .footer {
         display: none;
+        text-align: center;
+        font-size: calc(1.25 * var(--p-fontsize));
+        
+
     }
 
     .scroll {
@@ -544,54 +568,11 @@ footer p {
 .hidden * {
     display: none !important;
 }
+/*
 .underlined {
     text-decoration: underline;
 }
-
-/* Flex */
-.fl-dir-col {
-    flex-direction: column;
-}
-
-
-.fl-dir-row {
-    flex-direction: row;
-}
-
-.fl-dir-colr {
-    flex-direction: column-reverse;
-}
-
-.fl-dir-rowr {
-    flex-direction: row-reverse;
-}
-
-.fl-al-start {
-    align-items: flex-start;
-}
-
-.fl-al-end {
-    align-items: flex-end;
-}
-.fl-al-s-bet {
-    align-content: space-between;
-}
-
-.fl-al-s-aro {
-    align-content: space-around;
-}
-
-.fl-jc-s-bet {
-    justify-content: space-between;
-}
-
-.fl-jc-s-aro {
-    justify-content: space-around;
-}
-
-.fl-jc-s-eve {
-    justify-content: space-evenly;
-}
+*/
 
 
 
