--- a/style.css
+++ b/style.css
@@ -59,9 +59,15 @@ a {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     z-index: -1;
     animation: fadeIn 3s;
+  }
 
+  #canvas {
+    height: 100%;
+    width: 100%;
   }
 
 #background {
@@ -159,6 +165,7 @@ a.underlined:hover, a:hover span.underlined {
     margin: 0%;
     box-sizing: border-box;
     height: 100vh;
+    width: 100vh;
 }
 
 .header::before,
@@ -195,7 +202,6 @@ a.underlined:hover, a:hover span.underlined {
     transition: all .3s ease-in;
     animation: fadeIn 3s;
 
-
 }
 
 @media only screen and (max-width: 600px){
@@ -215,7 +221,40 @@ a.underlined:hover, a:hover span.underlined {
 
     }
 }
+@media only screen and (max-width: 1180px){
+    .header::before{
+        top: 80px;
+        left: 5%;
+        transition: all .3s ease-in;
+        padding: 100px;
+        border-width: 15px;
+    }
+    .header::after{
+        bottom: 80px;
+        right: 5%;
+        transition: all .3s ease-in ;
+        padding: 100px;
+        border-width: 15px;
 
+    }
+}
+@media only screen and (max-width: 820px){
+    .header::before{
+        top: 80px;
+        left: 10%;
+        transition: all .3s ease-in;
+        padding: 50px;
+        border-width: 15px;
+    }
+    .header::after{
+        bottom: 80px;
+        right: 10%;
+        transition: all .3s ease-in ;
+        padding: 50px;
+        border-width: 15px;
+
+    }
+}
 
 
 .title {
@@ -262,7 +301,7 @@ a.underlined:hover, a:hover span.underlined {
     .title {
         font-size: calc(var(--title-fontsize)-100px);
         line-height: calc(0rem + 1.5 * var(--title-fontsize));
-        top: 160px;
+        top: 140px;
         transition: all .3s ease-in;
         left: 8%;
     }
@@ -277,6 +316,43 @@ a.underlined:hover, a:hover span.underlined {
     }
 }
 
+@media only screen and (max-width: 1180px) {
+    .title {
+        font-size: calc(var(--title-fontsize)- 100000);
+        line-height: calc(1rem + .9 * var(--title-fontsize));
+        top: 180px;
+        transition: all .3s ease-in;
+        left: 11%;
+    }
+
+    .title h1 {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .title {
+        font-size: calc(var(--title-fontsize)-100px);
+        line-height: calc(0rem + 1.5 * var(--title-fontsize));
+        top: 200px;
+        transition: all .3s ease-in;
+        left: 22.9%;
+    }
+
+    .title h1 {
+        display: inline-flex;
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
 
 .vi::before {
     content: "";
@@ -346,8 +422,8 @@ a.underlined:hover, a:hover span.underlined {
         font-size: calc(0.7 * var(--p-fontsize));
         
         margin-right: 15%;
-        top: 30%;
-        left: 15%;
+        top: 28%;
+        left: 25%;
         
     }
     .intro h3{
@@ -356,7 +432,7 @@ a.underlined:hover, a:hover span.underlined {
     }
 
     .vi:before{
-        top: 32.5%;
+        top: 30.5%;
         left: 9.2%;
         height: 199px;
     }
@@ -367,9 +443,60 @@ a.underlined:hover, a:hover span.underlined {
 
     
 }
+@media only screen and (max-width: 1180px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(0.7 * var(--p-fontsize));
+        margin-right: 48%;
+        top: 37%;
+        left: 13.5%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.5 * var(--h3-fontsize));
+    }
 
+    .vi:before{
+        top: 40%;
+        left: 11.4%;
+        height: 182px;
+    }
+    #cycle{
+        font-size: calc(2.5 * var(--h3-fontsize));
 
+    }
 
+    
+}
+
+@media only screen and (max-width: 820px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(0.7 * var(--p-fontsize));
+        
+        margin-right: 20%;
+        top: 29%;
+        left: 26%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.5 * var(--h3-fontsize));
+    }
+
+    .vi:before{
+        top: 31.3%;
+        left: 23.5%;
+        height: 180px;
+    }
+    #cycle{
+        font-size: calc(2.5 * var(--h3-fontsize));
+
+    }
+
+    
+}
  span#cycle {
     color: #FFF;
     transition: transform 0.15s ease-in;
@@ -465,7 +592,80 @@ font-size: calc(1.85 * var(--h3-fontsize));
     }
 }
 
+@media only screen and (max-width: 1180px) {
+    .scroll {
+            transition: margin 0.05s ease-out;
+            
+            
+            margin-top: 0%;
+            margin-left: 38%;
+            transform: translate(-118%, -20%);
+    
+            
+        
+        }
+        .scroll::before{
+            margin-top: -5%;
+    
+        }
+    
+        .repolist{
+            margin-top: -2%;
+            margin-left: -1%;
+            left: 10px;
+            
+            font-size: calc(1.5 * var(--h3-fontsize));
+    
+            
+    
+        }
+    
+        .repolist a{
+            font-size: calc(1.3 * var(--h3-fontsize));
+    
+        }
 
+        .repo{
+        font-size: calc(var(--title-fontsize) - 200px);
+
+        }
+    }
+
+    @media only screen and (max-width: 820px) {
+        .scroll {
+            
+                transition: margin 0.05s ease-out;
+                
+                
+                margin-top: 30%;
+                margin-left: 17%;
+                left: 100px;
+                transform: translate(-118%, -20%);
+        
+                
+            
+            }
+            .scroll::before{
+                margin-top: -5%;
+        
+            }
+        
+            .repolist{
+                margin-top: 25%;
+                margin-left: -32%;
+                left: 10px;
+                
+                font-size: calc(2.5 * var(--h3-fontsize));
+        
+                
+        
+            }
+        
+            .repolist a{
+                font-size: calc(1.5 * var(--h3-fontsize));
+        
+            }
+        }
 .scroll{
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
@@ -588,7 +788,7 @@ footer p {
       .icons {
         display: flex;
         justify-content: center;
-        gap: 0.5vw;
+        gap: 1vw;
         width: 100%;
         bottom: 0%;
        
@@ -613,6 +813,13 @@ footer p {
     @media only screen and (max-width: 600px) {
         .icons img {
             width: 7vw;
+        }
+    }
+    @media only screen and (max-width: 1180px) {
+        .icons img {
+            width: 3vw;
+
+            
         }
     }
     
