--- a/style.css
+++ b/style.css
@@ -145,17 +145,23 @@ a.underlined:hover, a:hover span.underlined {
 }
 
 @media only screen and (max-width: 600px) {
-    .nav {
+    .nav-item {
         font-size: calc(1.5 * var(--nav-fontsize));
     }
 }
-
-@media only screen and (max-width: 600px) {
-    .nav {
-        font-size: calc(1.5 * var(--nav-fontsize));
+@media only screen and (max-width: 1024px) {
+    .nav-item {
+        font-size: calc(0.7 * var(--nav-fontsize));
+        
     }
 }
 
+@media only screen and (max-width: 912px) {
+    .nav-item {
+        font-size: calc(0.7 * var(--nav-fontsize));
+        
+    }
+}
 
 
 
@@ -221,24 +227,24 @@ a.underlined:hover, a:hover span.underlined {
 
     }
 }
-@media only screen and (max-width: 1180px){
+@media only screen and (max-width: 1024px){
     .header::before{
-        top: 80px;
+        top: 60px;
         left: 5%;
         transition: all .3s ease-in;
         padding: 100px;
         border-width: 15px;
     }
     .header::after{
-        bottom: 80px;
+        bottom: 60px;
         right: 5%;
         transition: all .3s ease-in ;
         padding: 100px;
         border-width: 15px;
-
+        
     }
 }
-@media only screen and (max-width: 820px){
+@media only screen and (max-width: 912px){
     .header::before{
         top: 80px;
         left: 10%;
@@ -256,9 +262,26 @@ a.underlined:hover, a:hover span.underlined {
     }
 }
 
+@media only screen and (max-width: 768px){
+    .header::before{
+        top: 80px;
+        left: 10%;
+        transition: all .3s ease-in;
+        padding: 50px;
+        border-width: 15px;
+    }
+    .header::after{
+        bottom: 80px;
+        right: 10%;
+        transition: all .3s ease-in ;
+        padding: 50px;
+        border-width: 15px;
+
+    }
+}
 
 .title {
-    top: 27%;
+    top: 26%;
     left: 18.4%;
     font-size: var(--title-fontsize);
     line-height: calc(2rem + var(--title-fontsize));
@@ -315,14 +338,52 @@ a.underlined:hover, a:hover span.underlined {
         font-variation-settings: "wght" 350;
     }
 }
-
-@media only screen and (max-width: 1180px) {
+@media only screen and (max-width: 1280px) {
     .title {
-        font-size: calc(var(--title-fontsize)- 100000);
-        line-height: calc(1rem + .9 * var(--title-fontsize));
-        top: 180px;
+        font-size: calc(var(--title-fontsize)-100px);
+        line-height: calc(0rem + 1.5 * var(--title-fontsize));
+        top: 200px;
         transition: all .3s ease-in;
-        left: 11%;
+        left: 18.5%;
+    }
+
+    .title h1 {
+        
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .title {
+        font-size: calc(var(--title-fontsize));
+        line-height: calc(2rem + .9 * var(--title-fontsize));
+        top: 120px;
+        transition: all .3s ease-in;
+        left: 10.8%;
+    }
+
+    .title h1 {
+        
+
+        flex-direction: column;
+    }
+
+    .title h1 span:first-child {
+        font-variation-settings: "wght" 350;
+    }
+}
+
+@media only screen and (max-width: 912px) {
+    .title {
+        font-size: calc(var(--title-fontsize));
+        line-height: calc(1rem + 1.5 * var(--title-fontsize));
+        top: 200px;
+        transition: all .3s ease-in;
+        left: 22.9%;
     }
 
     .title h1 {
@@ -335,11 +396,11 @@ a.underlined:hover, a:hover span.underlined {
     }
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 768px) {
     .title {
-        font-size: calc(var(--title-fontsize)-100px);
-        line-height: calc(0rem + 1.5 * var(--title-fontsize));
-        top: 200px;
+        font-size: calc(var(--title-fontsize));
+        line-height: calc(1rem + 1.5 * var(--title-fontsize));
+        top: 150px;
         transition: all .3s ease-in;
         left: 22.9%;
     }
@@ -424,6 +485,7 @@ a.underlined:hover, a:hover span.underlined {
         margin-right: 15%;
         top: 28%;
         left: 25%;
+       
         
     }
     .intro h3{
@@ -443,24 +505,85 @@ a.underlined:hover, a:hover span.underlined {
 
     
 }
-@media only screen and (max-width: 1180px) {
+
+
+@media only screen and (max-width: 1280px) {
     .intro {
         white-space: normal;
-        font-size: calc(0.7 * var(--p-fontsize));
-        margin-right: 48%;
-        top: 37%;
-        left: 13.5%;
+        font-size: calc(1.0 * var(--p-fontsize));
+        margin-right: 40%;
+        top: 40%;
+        left: 21%;
+        margin-bottom: -15%;
+      
         
     }
     .intro h3{
         white-space: normal;
+        font-size: calc(1.3 * var(--h3-fontsize));
+    }
+
+    .vi:before{
+        top: 40%;
+        left: 18.75%;
+        height: 182px;
+    }
+    #cycle{
         font-size: calc(1.5 * var(--h3-fontsize));
+
+    }
+
+    
+}
+
+@media only screen and (max-width: 1024px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(1.0 * var(--p-fontsize));
+        margin-right: 48%;
+        top: 37%;
+        left: 13.5%;
+        margin-bottom: -15%;
+      
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.3 * var(--h3-fontsize));
     }
 
     .vi:before{
         top: 40%;
         left: 11.4%;
         height: 182px;
+    }
+    #cycle{
+        font-size: calc(1.5 * var(--h3-fontsize));
+
+    }
+
+    
+}
+
+@media only screen and (max-width: 912px) {
+    .intro {
+        white-space: normal;
+        font-size: calc(1.0 * var(--p-fontsize));
+        
+        margin-right: 20%;
+        top: 29%;
+        left: 26%;
+        
+    }
+    .intro h3{
+        white-space: normal;
+        font-size: calc(1.8 * var(--h3-fontsize));
+    }
+
+    .vi:before{
+        top: 31%;
+        left: 23.7%;
+        height: 185px;
     }
     #cycle{
         font-size: calc(2.5 * var(--h3-fontsize));
@@ -470,10 +593,10 @@ a.underlined:hover, a:hover span.underlined {
     
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 768px) {
     .intro {
         white-space: normal;
-        font-size: calc(0.7 * var(--p-fontsize));
+        font-size: calc(1.0 * var(--p-fontsize));
         
         margin-right: 20%;
         top: 29%;
@@ -482,13 +605,13 @@ a.underlined:hover, a:hover span.underlined {
     }
     .intro h3{
         white-space: normal;
-        font-size: calc(1.5 * var(--h3-fontsize));
+        font-size: calc(1.8 * var(--h3-fontsize));
     }
 
     .vi:before{
-        top: 31.3%;
-        left: 23.5%;
-        height: 180px;
+        top: 31%;
+        left: 23.6%;
+        height: 185px;
     }
     #cycle{
         font-size: calc(2.5 * var(--h3-fontsize));
@@ -592,13 +715,13 @@ font-size: calc(1.85 * var(--h3-fontsize));
     }
 }
 
-@media only screen and (max-width: 1180px) {
+@media only screen and (max-width: 1280px) {
     .scroll {
             transition: margin 0.05s ease-out;
-            
-            
-            margin-top: 0%;
-            margin-left: 38%;
+            font-size: calc(0.5 * var(--h3-fontsize));
+
+            margin-top: -0.3%;
+            margin-left: 34%;
             transform: translate(-118%, -20%);
     
             
@@ -611,10 +734,10 @@ font-size: calc(1.85 * var(--h3-fontsize));
     
         .repolist{
             margin-top: -2%;
-            margin-left: -1%;
+            margin-left: 2%;
             left: 10px;
             
-            font-size: calc(1.5 * var(--h3-fontsize));
+            font-size: calc(0.5 * var(--h3-fontsize));
     
             
     
@@ -626,19 +749,59 @@ font-size: calc(1.85 * var(--h3-fontsize));
         }
 
         .repo{
-        font-size: calc(var(--title-fontsize) - 200px);
+        font-size: calc(var(--title-fontsize) - 100px);
 
         }
     }
 
-    @media only screen and (max-width: 820px) {
+
+@media only screen and (max-width: 1024px) {
+    .scroll {
+            transition: margin 0.05s ease-out;
+            font-size: calc(0.5 * var(--h3-fontsize));
+
+            margin-top: -1%;
+            margin-left: 43%;
+            transform: translate(-118%, -20%);
+    
+            
+        
+        }
+        .scroll::before{
+            margin-top: -5%;
+    
+        }
+    
+        .repolist{
+            margin-top: -2%;
+            margin-left: 4%;
+            left: 10px;
+            
+            font-size: calc(0.5 * var(--h3-fontsize));
+    
+            
+    
+        }
+    
+        .repolist a{
+            font-size: calc(1.3 * var(--h3-fontsize));
+    
+        }
+
+        .repo{
+        font-size: calc(var(--title-fontsize) - 100px);
+
+        }
+    }
+
+    @media only screen and (max-width: 912px) {
         .scroll {
             
                 transition: margin 0.05s ease-out;
                 
                 
-                margin-top: 30%;
-                margin-left: 17%;
+                margin-top: 32%;
+                margin-left: 12%;
                 left: 100px;
                 transform: translate(-118%, -20%);
         
@@ -652,7 +815,7 @@ font-size: calc(1.85 * var(--h3-fontsize));
         
             .repolist{
                 margin-top: 25%;
-                margin-left: -32%;
+                margin-left: -30%;
                 left: 10px;
                 
                 font-size: calc(2.5 * var(--h3-fontsize));
@@ -666,6 +829,78 @@ font-size: calc(1.85 * var(--h3-fontsize));
         
             }
         }
+        @media only screen and (max-width: 820px) {
+            .scroll {
+                
+                    transition: margin 0.05s ease-out;
+                    
+                    
+                    margin-top: 31%;
+                    margin-left: 15%;
+                    left: 100px;
+                    transform: translate(-118%, -20%);
+            
+                    
+                
+                }
+                .scroll::before{
+                    margin-top: -5%;
+            
+                }
+            
+                .repolist{
+                    margin-top: 25%;
+                    margin-left: -30%;
+                    left: 10px;
+                    
+                    font-size: calc(2.5 * var(--h3-fontsize));
+            
+                    
+            
+                }
+            
+                .repolist a{
+                    font-size: calc(1.5 * var(--h3-fontsize));
+            
+                }
+            }
+
+        @media only screen and (max-width: 768px) {
+            .scroll {
+            
+                transition: margin 0.05s ease-out;
+                
+                
+                margin-top: 30%;
+                margin-left: 19%;
+                left: 100px;
+                transform: translate(-118%, -20%);
+        
+                
+            
+            }
+            .scroll::before{
+                margin-top: -5%;
+        
+            }
+        
+            .repolist{
+                margin-top: 25%;
+                margin-left: -30%;
+                left: 10px;
+                
+                font-size: calc(2.5 * var(--h3-fontsize));
+        
+                
+        
+            }
+        
+            .repolist a{
+                font-size: calc(1.5 * var(--h3-fontsize));
+        
+            }
+            }
+
 .scroll{
     font-variation-settings: "wght" 350;
     background-color: var(--background-color-trans);
@@ -678,6 +913,8 @@ font-size: calc(1.85 * var(--h3-fontsize));
     /*margin-left: 50px;*/
     position: absolute;
     animation: fadeIn 3s;
+    
+
     
 }
 
@@ -815,14 +1052,18 @@ footer p {
             width: 7vw;
         }
     }
-    @media only screen and (max-width: 1180px) {
+    @media only screen and (max-width: 1024px) {
         .icons img {
-            width: 3vw;
+            width: 4vw;
 
             
         }
     }
-    
+    @media only screen and (max-width: 768px) {
+        .icons img {
+            width: 4vw;
+        }
+    }
 
 @keyframes fadeIn {
     0% { opacity: 0; }
